# spa-library-arya

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  spa_env_no_source.yml
examples/: smc-example.py  spa-example.py
examples/data/: ferret-l2_3MB-simticks.csv  ferret-l2_512kB-simticks.csv
src/spa/: Property2.py  Property3.py  Property4.py  Property5.py  Property6.py  Property7.py  RatioHyperproperty.py  ThresholdProperty.py  core.py  dataclasses.py  properties.py  util.py
test/: smc_test.py  spa_test.py
test/data/: ferret-l2_3MB-simticks.csv  ferret-l2_512kB-simticks.csv  prop1.csv  prop1_incomplete.csv  prop2.csv  prop3.csv  prop4.csv  prop5.csv  prop6.csv  prop7.csv
